# Jarvis

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
clients/: ios_client.py
docs/: API.md
jarvis/: __init__.py  agent.py  audit.py  config.py  main.py  standalone.py  storage.py  text_mode.py
jarvis-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
jarvis-ui/electron/: main.cjs  main.js  preload.cjs
jarvis-ui/src/: App.tsx  index.css
jarvis-ui/src/hooks/: useAudioAnalyzer.ts  useElectron.ts  (+6 more)
jarvis/audio/: __init__.py  barge_in.py  wake_word.py  wake_word_oww.py
jarvis/bench/: __init__.py  providers.py  report.py  runner.py  scenarios.py  toolspec.py
jarvis/integrations/: __init__.py  outlook.py
jarvis/llm/: __init__.py  claude.py  openai_llm.py  router.py  text_client.py
jarvis/runtime/: __init__.py  process_manager.py
jarvis/server/: __init__.py  app.py  hub.py  metrics.py  notify.py  session.py  websocket_voice.py
jarvis/stt/: __init__.py  deepgram.py  deepgram_streaming.py  fallback.py  hybrid.py  whisper_local.py
jarvis/tools/: __init__.py  alarms.py  base.py  briefing.py  calendar.py  code_analysis.py  contacts.py  files.py  github.py  home_macos.py  macos.py  memory.py  music.py  notes.py  outlook_calendar.py  routines.py  safety.py  sandbox.py  smart_home.py  system.py  tasks.py  telephony.py  web.py
jarvis/tts/: __init__.py  elevenlabs_tts.py
jarvis/ui/: __init__.py  server.py  tray_macos.py
scripts/: setup_cloudflare_tunnel.sh
tests/: __init__.py  conftest.py  test_alarms.py  test_api.py  test_code_analysis.py  test_config.py  test_files.py  test_memory.py  test_notes.py  test_tasks.py  test_tools.py
(+31 files in other folders)
